Closed Bug 875858 Opened 13 years ago Closed 4 months ago

Firefox window always opens on wrong screen when maximized (Mac)

Categories

(Core :: Widget: Cocoa, defect)

24 Branch
x86
macOS
defect

Tracking

()

RESOLVED FIXED
151 Branch
Tracking Status
relnote-firefox --- 151+
firefox151 --- fixed

People

(Reporter: hub, Assigned: jaas)

References

Details

Attachments

(1 file)

I noticed this on Aurora 22, but that's just because I starting using the setup. This is on MacOS X 10.6 Today Nightly. Configure a Mac with two screens. My setup is as follow: Left is the MBP 13 internal screen. Right is the external screen, much bigger. External screen has menu bar. I have Firefox maximized on the external screen (that has the menu bar) and each time I relaunch Firefox, the window reopen on the secondary screen (on the left). When I use Mozilla Persona, the login window appear on the left screen too while the main screen is on the right with the browser window. STR 1. with the above setup (main screen is external, on the right, has the menu bar), start Nightly with a new profile 2. maximize the window, quit, relaunch Nightly, the window is on the main screen. 3. now move the window to the left screen. Maximize the window. quit, relaunch Nightly, the window is on the left screen. 4. now move the window back to the main screen (right), maximize. quit, relaunch Nightly. OBSERVED Nightly window is back on the left screen. EXPECTED Nightly window should be reopen on the main screen, where it was last left. Note: this looks a lot like bug 264030.
Component: General → Widget: Cocoa
Product: Firefox → Core
This also happen on Mountain Lion... (I have upgraded) And it is very very very annoying as it make the update not very silent.
So this is a regression for you? If we could narrow down what changes caused it that would go a long way to figuring out how to fix it I think.
I don't know if it is a regression. I has NEVER worked, and it is not related to the OS version - I only started using Firefox on a two screen setup recently. The STR explain how to get the problem with a new profile.
> I have Firefox maximized on the external screen I haven't (yet) tried your STR, but I'll bet this is the key. Or to put this another way, I bet you wouldn't see this bug if you didn't maximize Firefox. If I'm right, then bug 875397 is probably related.
Hub, I've confirmed what you report. I've also confirmed that it happens if you arrange the (larger) external monitor to the left of your MBP's (smaller) internal monitor. My MBP has a Retina screen -- though I doubt that makes a difference. I've also confirmed my hunch -- the bug doesn't happen when you don't maximize the Firefox window. It'd be very interesting to perform a similar test in FF on different platforms -- like Windows or Linux.
Summary: Firefox always open on the secondary screen → Firefox window sometimes opens on wrong screen when maximized
Summary: Firefox window sometimes opens on wrong screen when maximized → Firefox window always opens on wrong screen when maximized (Mac)
Severity: normal → S3
Assignee: nobody → jaas

I can reproduce the exact behaviors described here 12 years later on macOS 26.4.1 and Firefox 149.0.2. Working on a fix.

Pushed by bwerth@mozilla.com: https://github.com/mozilla-firefox/firefox/commit/663962eb1000 https://hg.mozilla.org/integration/autoland/rev/3531e1101e03 On macOS, restore windows in a special mode (e.g. maximized) to the correct monitor on launch. r=mac-reviewers,bradwerth
Status: NEW → RESOLVED
Closed: 4 months ago
Resolution: --- → FIXED
Target Milestone: --- → 151 Branch
QA Whiteboard: [qa-triage-done-c152/b151]

Could you consider nominating this for a release note? (Process info)

Flags: needinfo?(jaas)

Release Note Request (optional, but appreciated)
[Why is this notable]: When relaunching Firefox, maybe mostly for the purpose of updating it, we don't want to mess with where the browser is. It can be disruptive and frustrating, maybe discouraging people from relaunching. Probably most people using Firefox on macOS in a multi monitor setup with maximized windows would experience this frustration.
[Affects Firefox for Android]: No
[Suggested wording]: After relaunching Firefox on macOS, consistently restore maximized browser windows to the correct monitor in multiple monitor setups.
[Links (documentation, blog post, etc)]:

relnote-firefox: --- → ?
Flags: needinfo?(jaas)

Thanks, added to the Fx151 nightly release notes, please allow 30 minutes for the site to update.
Keeping the relnote-firefox flag as ? to keep it on the radar for inclusion in the final Fx151 release notes.

Duplicate of this bug: 1005620

Added to the final Fx151 release notes

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: