Bug 875858 - On macOS, restore windows in a special mode (e.g. maximized) to the correct monitor on launch. r=mac-reviewers,bradwerth

Differential Revision: https://phabricator.services.mozilla.com/D295036